tests/parse_print/random_perturb/set01/change-01/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-01/change-01.essence "tests/parse_print/random_perturb/set01/change-01/change-01.essence" line 1, column 1:
unexpected langurge
expecting branching on, end of input, find statement, given statement, language, letting statement, objective, such that statement, or where statement
    "tests/parse_print/random_perturb/set01/change-01/change-01.essence" line 1, column 1
    langurge Essence 1.3
    ^^^^^^^